add controllers