@@ -10,6 +10,7 @@ import org.springframework.web.util.UriComponentsBuilder;
 import ru.practicum.ewm.exception.IllegalArgumentException;
 
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
 import java.util.List;
 
@@ -18,9 +19,8 @@ public class StatsClient {
     private final RestTemplate restTemplate;
     private final String statsUrl;
 
-    public StatsClient(RestTemplate restTemplate,
-                       @Value("${stats-server.url}") String statsUrl) {
-        this.restTemplate = restTemplate;
+    public StatsClient(@Value("${stats-server.url}") String statsUrl) {
+        this.restTemplate = new RestTemplate();
         this.statsUrl = statsUrl;
     }
 
@@ -46,21 +46,25 @@ public class StatsClient {
         if (start.isAfter(end)) {
             throw new IllegalArgumentException("Дата начала не может быть позже даты окончания");
         }
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+
         UriComponentsBuilder builder = UriComponentsBuilder
                 .fromHttpUrl(statsUrl + "/stats")
-                .queryParam("start", start)
-                .queryParam("end", end)
+                .queryParam("start", start.format(formatter))
+                .queryParam("end", end.format(formatter))
                 .queryParam("unique", unique);
 
         if (uris != null && !uris.isEmpty()) {
             uris.forEach(uri -> builder.queryParam("uris", uri));
         }
 
+
         ResponseEntity<ViewStatsDto[]> response = restTemplate.getForEntity(
                 builder.toUriString(),
                 ViewStatsDto[].class
         );
 
-        return Arrays.asList(response.getBody());
+        ViewStatsDto[] body = response.getBody();
+        return body != null ? Arrays.asList(body) : List.of();
     }
 }
